first css/html commit

--- a/index.html
+++ b/index.html
@@ -96,27 +96,27 @@
                 <h1>Client Testimonials</h1>
             </div>
             <div class="testimonials">
-                <div class="card">
+                <div class="card woman1">
                     <img src="images/image-emily.jpg">
-                    <h4>  We put our trust in Sunnyside and they delivered ,<br> making sure our needs were met and deadlines were always hit.
-                    </h4>
-                    <h5>Emily R.</h5>
-                    <h5>  Marketing Director
+                    <p>  We put our trust in Sunnyside and they delivered ,<br> making sure our needs were met and deadlines were always hit.
+                    </p>
+                    <h5 class="boldy">Emily R.</h5>
+                    <h5 class="smally">  Marketing Director
                     </h5>
                 </div>
-                <div class="card"><img src="images/image-thomas.jpg">
-                    <h4>   Sunnyside’s enthusiasm coupled with their <br>keen interest in our brand’s success made it<br> a satisfying and enjoyable experience.
+                <div class="card man"><img src="images/image-thomas.jpg">
+                    <p>   Sunnyside’s enthusiasm coupled with their <br>keen interest in our brand’s success made it<br> a satisfying and enjoyable experience.
                         .
-                    </h4>
-                    <h5>Thomas L.</h5>
-                    <h5>  Chief Operating Officer
+                    </p>
+                    <h5 class="boldy">Thomas L.</h5>
+                    <h5 class="smally">  Chief Operating Officer
                     </h5></div>
-                <div class="card"><img src="images/image-jennie.jpg">
-                    <h4>    Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+                <div class="card woman2"><img src="images/image-jennie.jpg">
+                    <p>    Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
 
-                    </h4>
-                    <h5>Jennie F.</h5>
-                    <h5>  Business Owner
+                    </p>
+                    <h5 class="boldy">Jennie F.</h5>
+                    <h5 class="smally">  Business Owner
                     </h5></div>
             </div>
         </div>
