html/css update

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </h5>
                 </div>
                 <div class="card man"><img src="images/image-thomas.jpg">
-                    <p>   Sunnyside’s enthusiasm coupled with their <br>keen interest in our brand’s success made it<br> a satisfying and enjoyable experience.
+                    <p>   Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it<br> a satisfying and enjoyable experience.
                         .
                     </p>
                     <h5 class="boldy">Thomas L.</h5>
@@ -132,13 +132,13 @@
             </div>
             <div class="menu">
                 <h3>About</h3>
-                <h3>Services</h3>
+                <h3 class="serve">Services</h3>
                 <h3>Projects</h3>
             </div>
             <div class="socials">
                 <img src="images/icon-facebook.svg">
                 <img src="images/icon-pinterest.svg">
-                <img src="images/icon-twitter.svg">
+                <img src="images/icon-twitter.svg" class="tweet">
                 <img src="images/icon-instagram.svg">
 
 
